--- a/views/skills.ejs
+++ b/views/skills.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>skills</title>
+    <title>PeerSwap</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
