--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>userprofile</title>
+    <title>PeerSwap</title>
 </head>
 <body>
     <h1>user profile page</h1>
