--- a/views/myNavbar.ejs
+++ b/views/myNavbar.ejs
@@ -1,6 +1,9 @@
 <nav>
     <ul>
-        <li><a href="/setting">settings</a></li>
         <li><a href="/myProfile">MYprofile</a></li>
+        <li><a href="/chatSection">chatSection</a></li>
+        <li><a href="/setting">settings</a></li>
+        
+        
     </ul>
 </nav>
