--- a/views/skills.ejs
+++ b/views/skills.ejs
@@ -9,18 +9,25 @@
 </head>
 
 <body>
-    <h1>select skills</h1>
-    <div class="checkbox-group">
-        <input type="checkbox" id="opt1" value="C++">
-        <label for="opt1">C++</label>
 
-        <input type="checkbox" id="opt2" value="JAVA">
-        <label for="opt2">JAVA</label>
+    <div class="container">
+        <h1>select skills</h1>
+        <form class="skills-page" action="/skills" method="post">
+            <div class="checkbox-group">
+                <input type="checkbox" id="opt1" value="C++">
+                <label for="opt1">C++</label>
 
-        <input type="checkbox" id="opt3" value="JavaScript">
-        <label for="opt3">JavaScript</label>
+                <input type="checkbox" id="opt2" value="JAVA">
+                <label for="opt2">JAVA</label>
+
+                <input type="checkbox" id="opt3" value="JavaScript">
+                <label for="opt3">JavaScript</label>
+                
+                <button class="skills-btn">proceed</button>
+                
+            </div>
+        </form>
     </div>
-
 </body>
 
 </html>
