--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>setting page</h1>
-    
+    <h1>welcome! you are ready to swap</h1>
+    <p>intermediate level assign to you</p>
+    <a href="/"><button class="welcome-btn">login</button></a>
+
 </body>
 </html>
