--- a/views/chatSection.ejs
+++ b/views/chatSection.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>setting page</h1>
+    <h1>chatting section</h1>
     
 </body>
 </html>
