--- a/views/myProfile.ejs
+++ b/views/myProfile.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PeerSwap</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>my profile</h1>
