--- a/views/test.ejs
+++ b/views/test.ejs
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>setting page</h1>
+    <h1>test page</h1>
+    <a href="/welcome"><button class="test-btn">proceed</button></a>
     
 </body>
 </html>
